[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/icons/icon_camera.svg" type="Texture" id=1]
[ext_resource path="res://scenes/ui_components/model_transform/ModelTransform.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/ui/debug_settings/debug_settings.gd" type="Script" id=3]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="ViewportTexture" id=6]
viewport_path = NodePath("Spectator_Cameras/SpectatorCamera_01")

[sub_resource type="ViewportTexture" id=7]
viewport_path = NodePath("Spectator_Cameras/SpectatorCamera_02")

[node name="Debug_Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1300.0
margin_bottom = 14.0
text = "Features activation"

[node name="Features" type="Panel" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 1300.0
margin_bottom = 250.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/Features"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Features/ScrollContainer"]
margin_right = 1288.0
margin_bottom = 618.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Teleport" type="CheckButton" parent="VBoxContainer/Features/ScrollContainer/VBoxContainer"]
margin_right = 1288.0
margin_bottom = 40.0
text = "Teleport"

[node name="Pen" type="CheckButton" parent="VBoxContainer/Features/ScrollContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 1288.0
margin_bottom = 84.0
text = "Pen"

[node name="Eraser" type="CheckButton" parent="VBoxContainer/Features/ScrollContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 1288.0
margin_bottom = 128.0
text = "Eraser"

[node name="Measurements" type="CheckButton" parent="VBoxContainer/Features/ScrollContainer/VBoxContainer"]
margin_top = 132.0
margin_right = 1288.0
margin_bottom = 172.0
text = "Measurements"

[node name="Material_Painter" type="CheckButton" parent="VBoxContainer/Features/ScrollContainer/VBoxContainer"]
margin_top = 176.0
margin_right = 1288.0
margin_bottom = 216.0
text = "Texture painting"

[node name="Grab" type="CheckButton" parent="VBoxContainer/Features/ScrollContainer/VBoxContainer"]
margin_top = 220.0
margin_right = 1288.0
margin_bottom = 260.0
text = "Grab"

[node name="Move" type="CheckButton" parent="VBoxContainer/Features/ScrollContainer/VBoxContainer"]
margin_top = 264.0
margin_right = 1288.0
margin_bottom = 304.0
text = "Move"

[node name="Rotate" type="CheckButton" parent="VBoxContainer/Features/ScrollContainer/VBoxContainer"]
margin_top = 308.0
margin_right = 1288.0
margin_bottom = 348.0
text = "Rotate"

[node name="Modeler" type="CheckButton" parent="VBoxContainer/Features/ScrollContainer/VBoxContainer"]
margin_top = 352.0
margin_right = 1288.0
margin_bottom = 392.0
text = "Primitive modeling"

[node name="Note" type="CheckButton" parent="VBoxContainer/Features/ScrollContainer/VBoxContainer"]
margin_top = 396.0
margin_right = 1288.0
margin_bottom = 436.0
text = "Note"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/Features/ScrollContainer/VBoxContainer"]
margin_top = 440.0
margin_right = 1288.0
margin_bottom = 452.0
custom_constants/separation = 12
custom_styles/separator = SubResource( 5 )

[node name="HDRI_Switch" type="CheckButton" parent="VBoxContainer/Features/ScrollContainer/VBoxContainer"]
margin_top = 456.0
margin_right = 1288.0
margin_bottom = 496.0
text = "Sky texture switch"

[node name="Global_Material_Switch" type="CheckButton" parent="VBoxContainer/Features/ScrollContainer/VBoxContainer"]
margin_top = 500.0
margin_right = 1288.0
margin_bottom = 540.0
text = "Global Material Switch"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/Features/ScrollContainer/VBoxContainer"]
margin_top = 544.0
margin_right = 1288.0
margin_bottom = 556.0
custom_constants/separation = 12
custom_styles/separator = SubResource( 5 )

[node name="Label3" type="Label" parent="VBoxContainer/Features/ScrollContainer/VBoxContainer"]
margin_top = 560.0
margin_right = 1288.0
margin_bottom = 574.0
text = "Welcome splash"
autowrap = true

[node name="Disable_Welcome_Splash" type="CheckButton" parent="VBoxContainer/Features/ScrollContainer/VBoxContainer"]
margin_top = 578.0
margin_right = 1288.0
margin_bottom = 618.0
text = "Disabled"

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_top = 254.0
margin_right = 1300.0
margin_bottom = 268.0
text = "Spectator cameras"

[node name="Spectator_Cameras" type="Panel" parent="VBoxContainer"]
margin_top = 272.0
margin_right = 1300.0
margin_bottom = 504.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/Spectator_Cameras"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Spectator_Cameras/ScrollContainer"]
margin_right = 1288.0
margin_bottom = 728.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/Spectator_Cameras/ScrollContainer/VBoxContainer"]
margin_right = 1288.0
margin_bottom = 14.0
text = "Camera 1"

[node name="Preview_Camera_01" type="TextureRect" parent="VBoxContainer/Spectator_Cameras/ScrollContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 1288.0
margin_bottom = 118.0
rect_min_size = Vector2( 0, 100 )
texture = SubResource( 6 )
expand = true
stretch_mode = 6

[node name="Transform_Camera_01" parent="VBoxContainer/Spectator_Cameras/ScrollContainer/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 122.0
margin_right = 1288.0
margin_bottom = 358.0

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/Spectator_Cameras/ScrollContainer/VBoxContainer"]
margin_top = 362.0
margin_right = 1288.0
margin_bottom = 366.0

[node name="Label2" type="Label" parent="VBoxContainer/Spectator_Cameras/ScrollContainer/VBoxContainer"]
margin_top = 370.0
margin_right = 1288.0
margin_bottom = 384.0
text = "Camera 2"

[node name="Preview_Camera_02" type="TextureRect" parent="VBoxContainer/Spectator_Cameras/ScrollContainer/VBoxContainer"]
margin_top = 388.0
margin_right = 1288.0
margin_bottom = 488.0
rect_min_size = Vector2( 0, 100 )
texture = SubResource( 7 )
expand = true
stretch_mode = 6

[node name="Transform_Camera_02" parent="VBoxContainer/Spectator_Cameras/ScrollContainer/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 492.0
margin_right = 1288.0
margin_bottom = 728.0

[node name="Screenshot_Prefix" type="LineEdit" parent="VBoxContainer"]
margin_top = 508.0
margin_right = 1300.0
margin_bottom = 534.0
right_icon = ExtResource( 1 )
caret_blink = true
caret_blink_speed = 0.5

[node name="Spectator_Cameras_Screenshot" type="Button" parent="VBoxContainer"]
margin_top = 538.0
margin_right = 1300.0
margin_bottom = 558.0
text = "Take cameras screenshot"

[node name="Label4" type="Label" parent="VBoxContainer"]
margin_top = 562.0
margin_right = 1300.0
margin_bottom = 576.0
text = "* Changes will take effect after saving and restarting."
autowrap = true

[node name="Save debug settings" type="Button" parent="VBoxContainer"]
margin_top = 580.0
margin_right = 1300.0
margin_bottom = 600.0
text = "Apply settings"

[connection signal="text_changed" from="VBoxContainer/Screenshot_Prefix" to="." method="set_screenshot_prefix"]
[connection signal="pressed" from="VBoxContainer/Save debug settings" to="." method="save_debug_settings"]
